--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ROM_URL=https://dl.google.com/developers/android/sc/images/ota/redfin-ota-spp2.210219.008-3d61e529.zip
+ROM_URL=https://oxygenos.oneplus.net/OnePlus5Oxygen_23_OTA_069_all_2010292138_55db5445239246dd.zip
 ZIP_NAME=update.zip
-OS_TYPE=Pixel
+OS_TYPE=OxygenOS
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
 VERSION=12
